# ferrous-beats

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: cli.rs  config.rs  errors.rs  main.rs
backend/src/handlers/: errors.rs  index.rs  mod.rs  shared_funcs.rs  shared_model.rs
backend/src/handlers/convert/: audio.rs
backend/src/handlers/download/: audio.rs  video.rs
backend/src/handlers/identify/: audio.rs
backend/src/handlers/shared/functions/: commands.rs  files.rs  tools.rs
backend/src/handlers/shared/model/: acoustid.rs  media.rs  musicbrainz.rs  responses.rs  tools.rs
backend/src/handlers/tools/chromaprint/: download.rs  status.rs
backend/src/handlers/tools/ffmpeg/: download.rs  status.rs
backend/src/handlers/tools/yt_dlp/: download.rs  status.rs  update.rs
backend/src/handlers/yt_dlp/: download.rs  status.rs  update.rs
ferrous-beats-ui/: package-lock.json  package.json
ferrous-frontend/: package-lock.json  package.json  tailwind.config.ts
ferrous-frontend/src/app/: layout.tsx  page.tsx  providers.tsx
ferrous-frontend/src/app/converter/: page.tsx
ferrous-frontend/src/app/downloader/: page.tsx
ferrous-frontend/src/app/identifier/: page.tsx
ferrous-frontend/src/app/tools/: page.tsx
ferrous-frontend/src/components/: FerrousNavbar.tsx  MusicLibraryTable.tsx  MusicPlayer.tsx  navbar.tsx  table.tsx
ferrous-frontend/src/components/icons/: FerrousBeatsLogo.tsx  HeartIcon.tsx  PauseCircleIcon.tsx  PlayCircleIcon.tsx  PreviousIcon.tsx  RepeatIcon.tsx  ShuffleIcon.tsx
ferrous-frontend/src/contexts/: MusicPlayerContext.tsx  ToolsContext.tsx
ferrous-frontend/src/hooks/: useMusicPlayer.tsx
src/: cli.rs  config.rs  doh.rs  main.rs
src/handlers/: mod.rs
src/handlers/download/: audio.rs  video.rs
src/handlers/shared/functions/: commands.rs  tools.rs
src/handlers/shared/model/: commands.rs  musicbrainz.rs
src/handlers/stream/: audio.rs
src/handlers/tools/chromaprint/: download.rs
src/handlers/tools/ffmpeg/: download.rs
src/handlers/tools/yt_dlp/: update.rs
ui/: Cargo.toml  Dioxus.toml
ui/src/: main.rs
ui/src/components/: footer.rs  navbar.rs
ui/src/pages/: music_library.rs
