[package]
name = "ferrous-beats"
description = "Ferrous Beats music downloader, player and more"
version = "0.1.0"
edition = "2021"
authors = ["Janusz Piechówka"]
repository = "https://github.com/jpiechowka/ferrous-beats"
license = "MIT OR Apache-2.0"
readme = "README.md"


[lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
lto = true
strip = true

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
clap = { version = "4.5.15", features = ["derive"] }
hickory-resolver = { version = "0.24.1", features = ["dns-over-https-rustls", "webpki-roots"] }
once_cell = "1.19.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }
zip = "2.1.6"
